<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="Grabar"
    tools:context=".Cuentas">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="381dp"
        android:layout_height="523dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:background="#81DF91"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/unnamed" />

        <ImageButton
            android:id="@+id/btnCerrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/cerrar"
            android:onClick="Cerrar"
            app:srcCompat="@android:drawable/btn_dialog" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desccorta"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editCorta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="10" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desclarga"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editLarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estado"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/swEstado"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/vigente"
            android:textSize="18sp"
            tools:checked="true" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/diapago"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editmonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/editcod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginBottom="168dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnGrabar"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:contentDescription="@string/grabar"
            android:onClick="Grabar"
            app:srcCompat="@android:drawable/ic_input_add" />

        <ImageButton
            android:id="@+id/BtnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:contentDescription="@string/buscar"
            android:onClick="buscarCuenta"
            app:srcCompat="@android:drawable/ic_search_category_default" />

        <ImageButton
            android:id="@+id/BtnModif"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:contentDescription="@string/modificar"
            android:onClick="ModificarCuenta"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:contentDescription="@string/list"
            android:onClick="ListaCuentas"
            app:srcCompat="@android:drawable/ic_dialog_dialer" />
    </LinearLayout>

    <TextView
        android:id="@+id/error"
        android:layout_width="361dp"
        android:layout_height="121dp"
        android:textColor="#FA0606"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>