<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ingresos">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginBottom="116dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnGrabar"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:contentDescription="@string/grabar"
            android:onClick="Grabar"
            app:srcCompat="@android:drawable/ic_input_add" />

        <ImageButton
            android:id="@+id/BtnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:contentDescription="@string/buscar"
            android:onClick="BuscarIngresos"
            app:srcCompat="@android:drawable/ic_search_category_default" />

        <ImageButton
            android:id="@+id/BtnModif"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:contentDescription="@string/modificar"
            android:onClick="ModificarIngresos"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/BtnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/eliminar"
            android:onClick="EliminarIngreso"
            app:srcCompat="@android:drawable/ic_menu_delete" />
    </LinearLayout>

    <TextView
        android:id="@+id/error3"
        android:layout_width="348dp"
        android:layout_height="81dp"
        android:textColor="#FA0606"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:visibility=" " />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="382dp"
        android:layout_height="535dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:background="#81DF91"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/unnamed" />

        <ImageButton
            android:id="@+id/btnCerrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/cerrar"
            android:onClick="Cerrar"
            app:srcCompat="@android:drawable/btn_dialog" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desccorta"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editCorta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/monto"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editmonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            tools:text="0" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/fechadevengue"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/fechadevengue"
            android:ems="10"
            android:focusable="false"
            android:inputType="date"
            android:maxLines="1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/obs"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editObs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editcod"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:ems="10"
            android:inputType="number"
            android:visibility="invisible" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>