<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="Reportes">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="384dp"
        android:layout_height="789dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:background="#81DF91"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/unnamed" />

        <ImageButton
            android:id="@+id/btnCerrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/cerrar"
            android:onClick="Cerrar"
            app:srcCompat="@android:drawable/btn_dialog" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/mes"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spmeses"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/año"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spanios"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reportes"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spreportes"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:onClick="BuscarRep"
            app:srcCompat="@android:drawable/ic_search_category_default" />

        <ListView
            android:id="@+id/lista"
            android:layout_width="match_parent"
            android:layout_height="225dp" />

        <EditText
            android:id="@+id/editcod"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:ems="10"
            android:inputType="number"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>